--- a/app/app/src/main/res/drawable/ic_trash.xml
+++ b/app/app/src/main/res/drawable/ic_trash.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="48dp"
     android:height="48dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+  <path
+      android:pathData="M18,6L17.199,18.013C17.129,19.065 17.094,19.591 16.867,19.99C16.667,20.341 16.365,20.624 16.001,20.8C15.588,21 15.061,21 14.006,21H9.994C8.939,21 8.412,21 7.999,20.8C7.635,20.624 7.333,20.341 7.133,19.99C6.906,19.591 6.871,19.065 6.801,18.013L6,6M4,6H20M16,6L15.729,5.188C15.467,4.401 15.336,4.008 15.093,3.717C14.878,3.46 14.602,3.261 14.29,3.139C13.938,3 13.523,3 12.694,3H11.306C10.477,3 10.062,3 9.71,3.139C9.398,3.261 9.122,3.46 8.907,3.717C8.664,4.008 8.533,4.401 8.271,5.188L8,6M14,10V17M10,10V17"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
 </vector>
