--- a/app/app/src/main/res/layout/fragment_admin.xml
+++ b/app/app/src/main/res/layout/fragment_admin.xml
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_box"
-                android:backgroundTint="@color/Bluttec"
+                android:backgroundTint="@color/Greeuttec"
                 android:padding="16dp"
                 android:layout_marginBottom="8dp">
 
@@ -121,7 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_box"
-                android:backgroundTint="@color/red"
+                android:backgroundTint="@color/Bluttec"
                 android:padding="16dp"
                 android:layout_marginBottom="8dp">
 
