--- a/app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_admin"
             android:icon="@drawable/ic_config"
             android:title="Administración"/>
+        <item
+            android:id="@+id/nav_debug"
+            android:icon="@drawable/ic_debug"
+            android:title="Depuración" />
     </group>
 </menu>
