vista de Excercises con examen diagnostico parcialmente funcional

--- a/app/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/app/src/main/res/layout/fragment_exercise.xml
@@ -6,14 +6,63 @@
     tools:context=".ui.themes.exercise.ExerciseFragment">
 
     <LinearLayout
+        android:id="@+id/screen_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
+
+        <LinearLayout
+            android:id="@+id/header_layout"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="Aca son los cuestionarios de examen o actividades"
-            android:textSize="64dp"/>
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"
+                android:text="Pregunta: "/>
+
+            <TextView
+                android:id="@+id/i_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"
+                android:text=" de "/>
+
+            <TextView
+                android:id="@+id/max_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24dp"/>
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:padding="8dp">
+
+            <LinearLayout
+                android:id="@+id/layout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </LinearLayout>
+        </ScrollView>
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="siguiente"/>
     </LinearLayout>
 </FrameLayout>
