--- a/app/app/src/main/res/layout/fragment_admin.xml
+++ b/app/app/src/main/res/layout/fragment_admin.xml
@@ -171,7 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_box"
-                android:backgroundTint="@color/red"
+                android:backgroundTint="@color/Bluttec"
                 android:padding="16dp"
                 android:layout_marginBottom="8dp">
 
