--- a/app/app/src/main/res/layout/fragment_item.xml
+++ b/app/app/src/main/res/layout/fragment_item.xml
@@ -10,14 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/linear_layout"
-            android:orientation="vertical"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:padding="16dp">
-        </LinearLayout>
+            android:layout_height="0px"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:id="@+id/linear_layout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp">
+            </LinearLayout>
+        </ScrollView>
         <TextView
             android:id="@+id/output"
             android:layout_width="wrap_content"
